WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
123036
[Cocoa] WKBrowsingController accessors crash instead of returning nil
https://bugs.webkit.org/show_bug.cgi?id=123036
Summary
[Cocoa] WKBrowsingController accessors crash instead of returning nil
mitz
Reported
2013-10-18 13:24:19 PDT
[Cocoa] WKBrowsingController accessors crash instead of returning nil
Attachments
Return nil if the underlying WK object is NULL
(1.56 KB, patch)
2013-10-18 13:26 PDT
,
mitz
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2013-10-18 13:26:24 PDT
Created
attachment 214598
[details]
Return nil if the underlying WK object is NULL
mitz
Comment 2
2013-10-18 14:07:43 PDT
Fixed in <
http://trac.webkit.org/r157648
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug