[Cocoa] WKBrowsingController accessors crash instead of returning nil https://bugs.webkit.org/show_bug.cgi?id=123036

Reviewed by Anders Carlsson.

* UIProcess/API/mac/WKBrowsingContextController.mm:
(autoreleased): Return nil if the object is NULL.



Canonical link: https://commits.webkit.org/141109@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157648 268f45cc-cd09-0410-ab3c-d52691b4dbfc